--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,19 +12,12 @@ code {
     monospace;
 }
 
-header {
-  background-color: #801001;
-  padding: 1rem;
-}
-
-header a {
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
+.site-container {
+  min-height: 100vh;
 }
 
 main {
-  padding: 1rem;
+  flex: 1;
 }
 
 .products {
@@ -40,7 +33,7 @@ main {
 
 .product img {
   width: 100%;
-  max-width: 400px;
+  max-width: 350px;
 }
 
 .product-info {
