--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,10 +20,20 @@ main {
   flex: 1;
 }
 
+.btn-primary,
+.btn-outline-primary {
+  background-color: #801001;
+  color: white;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.rating span {
+  color: #801001;
 }
 
 .product {
@@ -33,7 +43,7 @@ main {
 
 .product img {
   width: 100%;
-  max-width: 350px;
+  max-width: 400px;
 }
 
 .product-info {
