--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,6 +53,11 @@ main {
 .img-large {
   max-width: 80%;
 }
+
+.img-thumbnail {
+  height: 100px;
+}
+
 .logo-container {
   position: absolute;
   top: -20px; /* Adjust this to move logo higher or lower */
