--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,14 @@ main {
 .btn-outline-primary {
   background-color: #801001;
   color: white;
+  border: 2px solid #801001; /* Default border color */
+}
+
+.btn-primary:hover,
+.btn-outline-primary:hover {
+  background-color: #a61502;
+  color: white;
+  border: 2px solid #a61502;
 }
 
 .products {
