--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,3 +82,12 @@ h1 {
 .custom-navbar {
   position: relative;
 }
+
+.checkout-steps > div {
+  border-bottom: 0.7rem solid #a0a0a0;
+  color: #a0a0a0;
+}
+.checkout-steps > div.active {
+  border-bottom: 0.7rem solid #801001;
+  color: #000000;
+}
