--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -1496,6 +1496,10 @@ video {
     min-height: 50vh;
   }
 
+  .lg\:min-h-\[100vh\] {
+    min-height: 100vh;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
   }
