add cardheader to screens

--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -595,6 +595,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-3 {
+  bottom: 0.75rem;
+}
+
 .bottom-6 {
   bottom: 1.5rem;
 }
@@ -603,40 +607,16 @@ video {
   left: 0px;
 }
 
+.left-5 {
+  left: 1.25rem;
+}
+
 .right-0 {
   right: 0px;
 }
 
 .top-0 {
   top: 0px;
-}
-
-.right-3 {
-  right: 0.75rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.left-3 {
-  left: 0.75rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.bottom-3 {
-  bottom: 0.75rem;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
-.left-5 {
-  left: 1.25rem;
 }
 
 .z-0 {
@@ -710,6 +690,10 @@ video {
   margin-left: 1.25rem;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -740,10 +724,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
 }
 
 .block {
@@ -942,6 +922,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-9 {
+  gap: 2.25rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1520,20 +1504,16 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:min-h-\[120vh\] {
-    min-height: 120vh;
-  }
-
-  .lg\:min-h-\[50vh\] {
-    min-height: 50vh;
-  }
-
   .lg\:min-h-\[100vh\] {
     min-height: 100vh;
   }
 
   .lg\:min-h-\[30vh\] {
     min-height: 30vh;
+  }
+
+  .lg\:min-h-\[50vh\] {
+    min-height: 50vh;
   }
 
   .lg\:w-1\/2 {
